@@ -378,6 +378,9 @@ libc {
     tss_get;
     tss_set;
   }
+  GLIBC_2.42 {
+    pthread_gettid_np;
+  }
   GLIBC_PRIVATE {
     __libc_alloca_cutoff;
     __lll_lock_wake_private;
